--- a/W_ew-BMNNP/Docs/manual-BOX-WEW.tex
+++ b/W_ew-BMNNP/Docs/manual-BOX-WEW.tex
@@ -1,3 +1,4 @@
+% Manual for the two-rad version
 \documentclass[paper]{JHEP3}
 \usepackage{amsmath,amssymb,enumerate,url}
 \bibliographystyle{JHEP}
@@ -35,11 +36,13 @@
 
 
 \title{The  $\boldsymbol{W^\pm}$ EW NLO \& QCD production \\
-in the POWHEG BOX-V2 user manual~\footnote{Upgraded version prepared 
-with the collaboration of Mauro Chiesa and Homero Martinez.} } \vfill
-\author{Luca Barz\`e\\
-  PH-TH Department, CERN, CH-1211 Geneva 23, Switzerland\\
-  E-mail: \email{Luca.Barze@cern.ch}}
+in the POWHEG BOX-V2 user manual: svn v3371} \vfill
+\author{Mauro Chiesa\\
+  INFN, Sezione di Pavia, Via A. Bassi 6, 27100 Pavia, Italy\\
+  E-mail: \email{Mauro.Chiesa@physik.uni-wuerzburg.de}}
+\author{Homero Martinez\\
+  Dipartimento di Fisica, Universit\`a di Pavia and INFN, Sezione di Pavia, Via A. Bassi 6, 27100 Pavia, Italy\\
+  E-mail: \email{Homero.Martinez@pv.infn.it}}
 \author{Guido Montagna\\
   Dipartimento di Fisica Nucleare e Teorica, Universit\`a di Pavia and INFN, Sezione di Pavia, Via A. Bassi 6, 27100 Pavia, Italy\\
   E-mail: \email{Guido.Montagna@pv.infn.it}}
@@ -88,7 +91,8 @@ This program is an implementation of the Drell-Yan NLO cross sections
 $pp\to W \to \ell \nu$ including QCD and ElectroWeak (EW) 
 radiative corrections. 
 A detailed description of the implementation can be found in 
-Ref.~\cite{Barze:2012tt}. 
+Ref.~\cite{Barze:2012tt}. Major improvements w.r.t. svn version 3370 
+are described in Ref.~\cite{CarloniCalame:2016ouw}.
 %Please cite the paper when you use the program. \\
 In order to run the \tmtexttt{POWHEG BOX} program, we recommend the
 reader to start from the \tmtexttt{POWHEG BOX} user manual, which
@@ -99,7 +103,7 @@ parameters specific to the $W$ implementation.
 \section{Generation of events}
 \label{sec:gen_events}
 
-Build the executable\\
+To build the main \POWHEG{} executable, do: \\
 
 \noindent\tmtexttt{\$ cd POWHEG-BOX-V2/\DIR{} \\
 \$ make pwhg\_main }\\
@@ -107,72 +111,65 @@ Build the executable\\
 Then do (for example) \\
 
 \noindent\tmtexttt{\$
-cd runtest-lhc-8TeV\\
+cd runtest-lhc-14Tev-wp\\
 \$ ../pwhg\_main}\\
 
-At the end of the run, the file \tmtexttt{pwgevents.lhe} will contain
-100000 events for $W^+~\to~e^+~\nu_e$  in the Les Houches format. 
-In order to shower them with \PYTHIASIX{} or \PYTHIAEIGHT{} you 
-must have \PHOTOS{} compiled (even if you do not use it, it must be linked in). 
-The minimal procedure to do this is:
+At the end of the run, the file \tmtexttt{pwgevents.lhe} will contain 1000 events for $W^+~\to~\mu^+~\nu_\nu$ in the Les Houches format (\tmtexttt{.lhe} file). 
+
+We provide four executables, called ``interfaces", which process the events in the file \tmtexttt{pwgevents.lhe} and give them as inputs to parton shower programs, performing the required vetoes and setting the required flags in a manner consistent with the physical accuracy of the input events. \PYTHIA{} is used to perform the QCD shower. The QED shower can be done using \PYTHIA{} or the independent program \PHOTOS{}~\cite{Golonka:2005pn}. The four interfaces are:
+
+\begin{itemize}
+\item \tmtexttt{main-PYTHIA81-lhef} : In this interface, \PYTHIAEIGHT{} (versions 8.1xx) is used to perform the QCD shower, while the QED shower can be done using \PHOTOSPP{} (C++ version of \PHOTOS{}), or \PYTHIAEIGHT{}. It is designed to work with versions of \PYTHIAEIGHT{} up to 8.186. It has been tested with \PYTHIA{} version 8.185 and \PHOTOSPP{} version 3.56. The output of the shower can be analyzed looking at the histograms in the output \tmtexttt{.top} file. Optionally, the events after the shower can be saved in another \tmtexttt{.lhe} file (see section~\ref{sec:flags}).
+
+Even if you do not use \PHOTOSPP{}, it has to be linked. The minimal procedure is to use the version 3.56 included in the \DIR{} package, doing:
 \\~\\
 \noindent\tmtexttt{\$ 
 cd PHOTOS \\ 
 \$./configure --without-hepmc  \\ 
 \$ make}
 \\
-\\
-Then, in order to shower them with \PYTHIASIX{} do\\~\\
-\tmtexttt{\$
-cd POWHEG-BOX-V2/\DIR{}\\ \$ make
-main-PYTHIA-lhef \\ \$ cd
-runtest-lhc-8TeV \\
-\$ ../main-PYTHIA-lhef}
-\\
 
-If you prefer to shower the events with \PYTHIAEIGHT{} do\\~\\
-\tmtexttt{\$
-cd POWHEG-BOX-V2/\DIR{} \\ \$ make
-main-PYTHIA8-lhef \\ \$ cd
-runtest-lhc-8TeV \\
-\$ ../main-PYTHIA8-lhef}
-\\
+The flag \verb+PHOTOSCC_LOCATION+ must be set in the \tmtexttt{Makefile} to the path of installation of \PHOTOSPP{}. This path can be the folder \tmtexttt{\DIR{}/PHOTOS} if the user wants to use the included version of \PHOTOSPP{}, otherwise it should be set to the folder of an external installation.
 
-The executables \tmtexttt{main-PYTHIA-lhef} and \tmtexttt{main-PYTHIA8-lhe} are ``interfaces" that process the events in the file \tmtexttt{pwgevents.lhe} and give them as inputs to the parton shower, performing the required vetoes and setting the required flags of the shower programs, in a manner consistent with the physical accuracy of the input events. The output of the shower can be analyzed looking at the histograms in the \tmtexttt{.top}. file. The histograms and cuts can be customized editing the file \verb+pwhg_analysis.f+.
+\PYTHIAEIGHT{} has to be downloaded and compiled by the user. The script \tmtexttt{pythia8-config} should configure automatically the path to the \PYTHIAEIGHT{} installation in the \tmtexttt{Makefile}, if this is not the case, the user must set manually the \verb+PYTHIA8LOCATION+ flag. 
 
-\PYTHIA{} is used to perform the QCD shower. The QED shower can be done using \PYTHIA{} or the independent program \PHOTOS{}~\cite{Golonka:2005pn}. The external source codes required by \tmtexttt{main-PYTHIA-lhef} are the Fortran codes of \PYTHIASIX{} and \PHOTOS{}. They are included in the \POWHEGBOX{} and in the \DIR{} folder, respectively. 
-
-On the other hand, the interface \tmtexttt{main-PYTHIA8-lhef} requires the linking to the external libraries \PYTHIAEIGHT{} and \PHOTOSPP{} (both programs written in C++). \PHOTOSPP{} version 3.56 is included in the \DIR{} package, and can be compiled doing:\\
-
+Once \PHOTOSPP{} and \PYTHIAEIGHT{} are compiled and the flags are set properly in the \tmtexttt{Makefile}, the interface can be compiled, doing:
+\\~\\
 \tmtexttt{
-\noindent \$ cd POWHEG-BOX-V2/\DIR{}/PHOTOS \\ 
-\$ configure --without-hepmc \\
-\$ make} \\
+\$ cd POWHEG-BOX-V2/\DIR{} \\ 
+\$ make main-PYTHIA81-lhef}
+\\
 
-The flag \verb+PHOTOSCC_LOCATION+ must be set in the \tmtexttt{Makefile} to the path of installation of \PHOTOSPP{}. This path can be the folder \tmtexttt{\DIR{}/PHOTOS} if the user wants to use the included version of \PHOTOSPP{}, otherwise it should be set to the folder of an external installation. The interface has been tested with \PHOTOSPP{} version 3.56.
-
-\PYTHIAEIGHT{} has to be downloaded and compiled by the user. The interface is designed to work with versions of \PYTHIAEIGHT{} up to 8.186 (an interface to {\tt PYTHIA8.2} is in progress). 
-The script \tmtexttt{pythia8-config} should configure automatically the path in the \tmtexttt{Makefile}, if this is not the case, the user must set the \verb+PYTHIA8LOCATION+ flag to the correct path of installation of \PYTHIAEIGHT{}. 
-
-Once \PHOTOSPP{} and \PYTHIAEIGHT{} are compiled and the flags are set properly in the \tmtexttt{Makefile}, the interface \tmtexttt{main-PYTHIA8-lhef} should compile. Then, before running it, the path to \PHOTOSPP{} libraries needs to be added to the list of dynamically linked libraries, and a variable pointing to the path of \PYTHIAEIGHT{} particle data (\tmtexttt{.xml}) files) needs to be set. In order to do this, the script \tmtexttt{setlibrarypaths.sh} must be edited to point to the correct paths, and then executed in the current shell, doing:
+Before running, the path to \PHOTOSPP{} libraries needs to be added to the list of dynamically linked libraries, and a variable pointing to the path of \PYTHIAEIGHT{} particle data (\tmtexttt{.xml}) files) needs to be set. In order to do this, the script \tmtexttt{setlibrarypaths.sh} must be edited to point to the correct paths, and then executed in the current shell, doing:
 \\~\\
 \tmtexttt{\$ source setlibrarypaths.sh }\\
 
-Another interface is provided which processes the \POWHEG{} generated events, calls the QED final state shower implemented by \PHOTOSPP{} and generates a new event file in LHE format, that can be then interfaced to a QCD shower program, where QED radiation must
-be switched off to avoid double counting. To compile and execute this interface, do:
+To run the interface, do:
 \\~\\
-\noindent\tmtexttt{\$
-cd POWHEG-BOX-V2/\DIR{} \\ 
-\$ make main-PHOTOS-lhef \\ \$ cd
-runtest-lhc-8TeV \\
-\$ ../main-PHOTOS-lhef}
+\tmtexttt{
+\$ cd runtest-lhc-14TeV-wp \\
+\$ ../main-PYTHIA81-lhef}
 \\
 
-The compilation requires the setting of the flag \verb+PHOTOSCC_LOCATION+ in the \tmtexttt{Makefile}, and the \PHOTOSPP{} path as environmental variable, as explained above.
+\item \tmtexttt{main-PYTHIA82-lhef} : Similar interface to \tmtexttt{main-PYTHIA81-lhef}, but designed to work with newer versions of \PYTHIA{} (versions 8.2xx). It has been tested with version 8.223. The compilation / linking procedure is similar to the one described in the previous item.
 
-%There is the possibility to set the flag \verb+HEPMCLOCATION+ in the \tmtexttt{Makefile}, in case the user wants to link to \tmtexttt{HEPMC} libraries. However, they are in principle not needed by the executables mentioned before, so this flag can be left empty.
+\item \tmtexttt{main-PYTHIA6-lhef} : Interface to \PYTHIASIX{} and \PHOTOS{} (both codes written in Fortran). The source codes of \PYTHIASIX{} and \PHOTOS{} are included in the \POWHEGBOX{} and in the \DIR{} folder, respectively, so no flag or linking to external libraries need to be done. To compile and run, simply do:
+\\~\\
+\noindent\tmtexttt{
+\$ cd POWHEG-BOX-V2/\DIR{} \\ 
+\$ make main-PYTHIA6-lhef \\ 
+\$ cd runtest-lhc-14TeV \\
+\$ ../main-PYTHIA6-lhef}
+\\
+
+\item \tmtexttt{main-PHOTOS-lhef} : Interface to \PHOTOSPP{}, it processes the \POWHEG{} generated events, calls the QED final state shower implemented by \PHOTOSPP{} and generates a new event file in LHE format, that can be then interfaced to a QCD shower program, where QED radiation must be switched off to avoid double counting. The compilation and linking requires the \PHOTOS{} related steps described in item (1).
+
+\end{itemize}
+
+The customization of the histograms and cuts provided in the output \tmtexttt{.top} file (for interfaces \tmtexttt{main-PYTHIA81-lhef}, \tmtexttt{main-PYTHIA82-lhef} and \tmtexttt{main-PYTHIA6-lhef}), can be done modifying the code in \verb+pwhg_analysis.f+ (\tmtexttt{analysis} subroutine). In addition, C++ based analysis can be done accessing the events from the files \tmtexttt{pythia81F77.cc}, \tmtexttt{pythia82F77.cc} (function \verb+pythia_next_+) or in the file \tmtexttt{photosCCF.cc} (function \verb+photos_process_+), for the interfaces \tmtexttt{main-PYTHIA81-lhef}, \tmtexttt{main-PYTHIA82-lhef} and \tmtexttt{main-PHOTOS-lhef}, respectively.
 
 \section{Process specific input parameters}
+\label{sec:flags}
 
 All the parameters and flags are set in the input card file \tmtexttt{powheg.input}. The mandatory parameters are those needed to select the final state
 leptonic species coming from the vector-boson:
@@ -258,81 +255,51 @@ This last option is just to check EW corrections at the NLO level (i.e.,
 the Les Houches events do not have much meaning).
 \\
 \\
-The program can be interfaced to both \PYTHIASIX{} and  \PYTHIAEIGHT{}, as explained in section~\ref{sec:gen_events}. In order to switch off photon radiation from \PYTHIA{} and use \PHOTOS{} instead, use the setting:
-\\
-\tmtexttt{use\_photos 1   ! default 0}
-\\
-in the \tmtexttt{powheg.input} file.
-\\
-For photon final state radiation a comment is in order. According to 
-the \POWHEG{} method, the radiation by the shower has to be generated 
-from a starting scale given by the hardest $\pt$ tried at the matrix element 
-level (the variable {\tt scalup} written in the event file 
-\tmtexttt{pwgevents.lhe}). This is true also in the case that both 
-QCD and QED radiation are present, as detailed in 
-Ref.~\cite{Barze:2012tt} . Both \PYTHIASIX{} and \PYTHIAEIGHT{} 
-do not use this starting scale for the generation of QED final state radiation 
-from the $W$. Hence, in order to avoid double counting of QED radiation, 
-a veto algorithm is necessary. The same problem is present also using 
-\PHOTOS{}. 
-This algorithm 
-is provided automatically in the files \tmtexttt{main-PYTHIA.f}, \tmtexttt{main-PYTHIA8.f} and 
-\tmtexttt{scalupveto.f}. For the case of the interface to \PYTHIAEIGHT{}, the user can optionally 
-adopt the internal matching algorithm of \PYTHIAEIGHT{}, which is switched 
-on by setting the flag:
-\\
-\tmtexttt{py8veto 1   ! default 0}
-\\
-in the \tmtexttt{powheg.input} file.
-\\
-\\
-A general issue is the matching between the NLO calculation and the 
-(QCD and QED) higher order corrections given by the parton shower: 
-due to the different definitions of $p_\perp$ in \POWHEG{} and 
-\PYTHIAEIGHT{}/\PYTHIASIX{}, some double counting or dead zone 
-can arise. In \PYTHIAEIGHT{} the default is to generate all QCD/QED 
-shower emissions up to the kinematical limit and then veto emissions 
-harder than the \POWHEG{} emission, according to the \POWHEG{} 
-$p_\perp$ definition. This is done, as default, by means of the provided 
-\tmtexttt{class PowhegHooks}. With the provided \PYTHIAEIGHT{} interface 
-the user can optionally choose an alternative scheme, where 
-the shower starting scale is fixed to {\tt scalup} and no veto 
-is performed. This choice can be activated by setting 
-\\
-\tmtexttt{veto1 1   ! default 0}
-\\
-in the \tmtexttt{powheg.input} file.
-\\
-In this case, if the QED higher order radiation is handled by \PYTHIAEIGHT{}, 
-also the QED starting scale is set to {\tt scalup} through the 
-\tmtexttt{class MyUserHooks}. 
-\\ 
-\\
-Additional flags available for the \PYTHIAEIGHT{} interface 
-are the following: 
-\\
-\tmtexttt{noQEDq 1   ! default 0}, which allows to switch off QED radiation 
-from quarks; 
-\\
-\tmtexttt{pytune xx  ! default 5}, which allows to change the tune; 
-\\
-\tmtexttt{nohad 1  ! default 0}, which allows to switch off the hadronization. 
-\\
-In the provided interface to \PYTHIAEIGHT{} 
-the decay of hadronic resonances which can proceed radiatively has been 
+
+\subsection{Flags used by the shower interfaces}
+
+The flags starting with \verb+SI_+ configure the behavior of the shower interfaces. The following flags are used by the interfaces \tmtexttt{main-PYTHIA81-lhef} and \tmtexttt{main-PYTHIA82-lhef}:
+
+\begin{itemize}
+\item[] \verb+SI_inputfile+: Configure the input file for the shower interfaces (default: \tmtexttt{./pwgevents.lhe}).
+\item[]\verb+SI_maxshowerevents+: Number of events to read from the input file (default: all events).
+\item[]\verb+SI_pythiamatching+, explained below.
+\item[]\verb+SI_pytune+: Set the \PYTHIA{} tune used in the QCD shower.
+\item[]\verb+SI_dopythiaqed+: Turn ON / OFF \PYTHIA{} QED shower (default OFF).
+\item[]\verb+SI_use_photos+: Turn ON / OFF the final state QED shower by \PHOTOS{} (default OFF). If it is ON, it automatically sets off the final state QED radiation from \PYTHIAEIGHT{}.
+\item[]\verb+SI_kt2minqed+: Set value of photos low energy cut off (default is $10^{-6}$).
+\item[]\verb+SI_usepy8veto+, explained below.
+\item[]\verb+SI_nohad+: Allows to switch OFF the hadronization (the hadronization is ON by default).
+\item[]\verb+SI_savelhe+: Turn ON / OFF the production of an output LHE file (default OFF).
+\item[]\verb+SI_savehistos+: Turn ON / OFF the production of histograms in \tmtexttt{.top} file (default OFF).
+\item[]\verb+SI_no_tworadevents+, explained below.
+\end{itemize}
+
+According to the \POWHEG{} method, the radiation by the shower has to be generated from a starting scale given by the hardest $\pt$ tried at the matrix element level. Traditionally, this scale is written in the variable {\tt scalup} in the {tt LHE} event file. However, for the DY process, when both QCD and EW NLO corrections are present (Ref.~\cite{Barze:2012tt}), it is necessary to keep track in the \POWHEG{} events of two scales, one for initial state radiation ({\tt scalup-isr}) and one for final state radiation ({\tt scalup-fsr}). These two scales are used as starting points for the IS and FS showers, respectively. \PYTHIAEIGHT{} and \PHOTOSPP{} do not use {\tt scalup-fsr} for the generation of QED final state radiation from the $W$. Hence, in order to avoid double counting of QED radiation, a veto algorithm is necessary. This veto is activated unless the flag \verb+no_ew+ is activated in \tmtexttt{powheg.input}.
+
+A general issue is the matching between the NLO calculation and the (QCD and QED) higher order corrections given by the parton shower: due to the different definitions of $p_\perp$ in \POWHEG{} and \PYTHIAEIGHT{}, some double counting or dead zone can arise. By default (flag \verb+SI_pythiamatching+ equal to~2), the interface generates all QCD/QED shower emissions up to the kinematical limit and then veto emissions harder than the \POWHEG{} scales ({\tt scalup-isr} and {\tt scalup-fsr}), computed according to the \POWHEG{} $p_\perp$ definition. The user can optionally choose an alternative scheme, where the shower starting scales are fixed and no veto's are performed. This choice can be activated by setting the flag \verb+SI_pythiamatching+ equal to~1.
+
+When FS QED radiation is implement by \PHOTOSPP{}, a Fortran-based function is used to veto QED emissions and perform the correct matching (implemented in the file \tmtexttt{main-PYTHIA-8.f}). If FS QED radiation is done by \PYTHIAEIGHT{}, the matching can be done using Fortran-based algorithms coded in the files \tmtexttt{main-PYTHIA-8.f} and \tmtexttt{scalupveto.f} (flag \verb+SI_usepy8veto+ equal to~0), or alternatively, use the matching algorithms provided by \PYTHIAEIGHT{} (flag \verb+SI_usepy8veto+ equal to~1). Those algorithms use the {\tt UserHooks} functions, and their behavior depend on the value of the flag \verb+SI_pythiamatching+.
+
+In the case the interface is used to read events where the two scales {\tt scalup-isr} and {\tt scalup-fsr} are not present, and {\tt scalup} is to be used as starting scale for the showers, the flag \verb+SI_no_tworadevents+ should be set to~1.
+
+The decay of hadronic resonances which can proceed radiatively has been 
 suppressed. In order to let the resonances decay, the user should 
-open the file \tmtexttt{pythia8F77.cc} and comment the relevant lines 
-in {\tt pythia\_init}.
-\\
-\\
+open the file \tmtexttt{pythia81F77.cc} (or \tmtexttt{pythia82F77.cc}) and comment the relevant lines in the function {\tt pythia\_init}.
+
+The interface \tmtexttt{main-PYTHIA6-lhef} can be customized using the following flags: \verb+SI_inputfile+, \verb+SI_maxshowerevents+, \verb+SI_pytune+, 
+\verb+SI_use_photos+, \verb+SI_kt2minqed+, \verb+SI_savehistos+, \verb+SI_no_tworadevents+, read also from the \tmtexttt{powheg.input} file. The other flags have no effect. Notice that in this case, the QED radiation from \PYTHIA{} is ON by default.
+
+The interface \tmtexttt{main-PHOTOS-lhef} uses only the relevant flags, namely:  \verb+SI_inputfile+, \verb+SI_maxshowerevents+, \verb+SI_kt2minqed+.
+
 For further customization of the settings used by the shower interfaces, beyond the flags available in \tmtexttt{powheg.input}, the user can modify the following source code files:
 
 \begin{itemize}
-\item Interface \tmtexttt{main-PYTHIA-lhef}: Settings in files \tmtexttt{setup-PYTHIA-lhef.f} and \tmtexttt{photos.f}.
-\item Interface \tmtexttt{main-PYTHIA8-lhef}: Settings in file \tmtexttt{pythia8F77.cc}.
+\item Interface \tmtexttt{main-PYTHIA81-lhef}: Settings in file \tmtexttt{pythia81F77.cc}.
+\item Interface \tmtexttt{main-PYTHIA82-lhef}: Settings in file \tmtexttt{pythia82F77.cc}.
+\item Interface \tmtexttt{main-PYTHIA6-lhef}: Settings in file \tmtexttt{setup-PYTHIA6-lhef.f}
 \item Interface \tmtexttt{main-PHOTOS-lhef}: Settings in file \tmtexttt{photosCCF.cc}.
 \end{itemize}
-
 
 \section{Generation of a sample with $W^+$ and $W^-$
   events}\label{sec:merging}
@@ -399,7 +366,14 @@ method,''
 \bibitem{Barze:2012tt}
   L.~Barz\`e, G.~Montagna, P.~Nason, O.~Nicrosini and F.~Piccinini,
   ``Implementation of electroweak corrections in the POWHEG BOX: single W production,''
-  [arXiv:1202.0465 [hep-ph]]
+  [arXiv:1202.0465 [hep-ph]].
+
+\bibitem{CarloniCalame:2016ouw}
+  C.M.~Carloni Calame, M.~Chiesa, H.~Martinez, 
+  G.~Montagna, O.~Nicrosini, F.~Piccinini, and A.~Vicini, 
+  %``Precision Measurement of the W-Boson Mass: Theoretical
+  %                      Contributions and Uncertainties,''
+  [arXiv:1612.02841[hep-ph]].
 
 %\cite{Golonka:2005pn}
 \bibitem{Golonka:2005pn}
