small correction in Documentation
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3387 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/ggHH/Docs/manual-BOX-HH.tex
+++ b/ggHH/Docs/manual-BOX-HH.tex
@@ -130,7 +130,7 @@ The {\tt run.sh} script in the {\tt testrun} folder allows to quickly
 start some test runs. By simply typing {\tt ./run.sh} a menu with the
 various running modes is shown. In all cases the code goes through all
 the various steps (parallelstages) of the calculation, from the
-generation of the ({\tt VEGAS}) grid to the production of LHE files.
+generation of the ({\tt MINT}) grid to the production of LHE files.
 
 \section{Running in the full SM ({\tt mtdep=3})}
 The 2-loop virtual amplitudes in the full SM are computed via a grid
