Fixed minor bugs for most recent version of gcc, added initialization of virtual variable
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3444 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/ggHH/Docs/manual-BOX-HH.tex
+++ b/ggHH/Docs/manual-BOX-HH.tex
@@ -213,7 +213,7 @@ $\pthh$~\cite{Heinrich:2017kxx}. Changing the damping factor $F$ by
 setting the flag {\tt hdamp}$(=h)$ to some finite value in the input
 card brings the high transverse momentum tails back onto the fixed NLO
 predictions. Varying {\tt hdamp} allows to assess shower untertainties
-within the \POWHEG matching scheme. However, when choosing a value
+within the \POWHEG{} matching scheme. However, when choosing a value
 for {\tt hdamp}, it is important not to cut into the Sudakov
 regime. In fact, a too low value for {\tt hdamp} could spoil the
 logarithmic accuracy of the prediction. For this reason we suggest not
